# FastAPI_MongoDB

./: README.md  app.py  pyproject.toml
